# parsegen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bench_data  generate.sh  test_grammar  test_grammar_large
.github/workflows/: ci.yml
benches/: benchmarks.rs
crates/parsegen/src/: codegen.rs  first.rs  grammar.rs  lib.rs  lr1.rs  lr_codegen.rs  maplit.rs
crates/parsegen_util/: Cargo.toml
crates/parsegen_util/src/: debug.rs  iter.rs  lib.rs  node_idx.rs
src/: ast.rs  bitset.rs  codegen.rs  collections.rs  earley.rs  first.rs  follow.rs  grammar.rs  graphviz.rs  item.rs  lalr1.rs  lane_table.rs  lane_tracer.rs  lib.rs  ll1.rs  lower.rs  lr0.rs  lr1.rs  lr_codegen.rs  lr_common.rs  main.rs  maplit.rs  parse_table.rs  simulate.rs  state.rs  state_graph.rs  terminal.rs  test_grammars.rs  utils.rs
tests/: tests.rs
